fixed scrollbar bug and other unresponsive controls

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -71,6 +71,7 @@ $header-height: 60px;
         right: 0;
         position: absolute;
         background-size: 350px;
+        pointer-events: none;
       }
     }
   }
